# psi-skills

./: .gitignore  CLAUDE.md  PSI.md  README.md  install.sh  pyproject.toml
agents/: psi.md
examples/: README.md
examples/01_MoS2_qe_wannier/: prompt.md
examples/02_MoS2_vasp/: prompt.md
examples/03_Si_convergence/: prompt.md
examples/04_Fe_magnetism/: prompt.md
examples/05_graphene_hetero/: prompt.md
skills/psi-add-computer/: SKILL.md  add_computer.py
skills/psi-bgw-epsilon/: SKILL.md
skills/psi-bgw-gw-conv-analyze/: SKILL.md  bgw_conv_analyze.py
skills/psi-bgw-gw-conv-epsilon/: SKILL.md
skills/psi-bgw-gw-conv-sigma/: SKILL.md
skills/psi-bgw-parabands/: SKILL.md
skills/psi-bgw-pw2bgw/: SKILL.md
skills/psi-bgw-sigma/: SKILL.md
skills/psi-fetch-struct/: SKILL.md  fetch_struct.py
skills/psi-graph/: SKILL.md  graph.py
skills/psi-init/: SKILL.md  init.py
skills/psi-list-computers/: SKILL.md  list_computers.py
skills/psi-new-calc/: SKILL.md  new_calc.py
skills/psi-new-report/: SKILL.md  new_report.py
skills/psi-pull-calc/: SKILL.md  pull_calc.py
skills/psi-push-calc/: SKILL.md  push_calc.py
skills/psi-qe-input-generator/: SKILL.md  qe_input_gen.py
skills/psi-qe-input-validator/: SKILL.md
skills/psi-qe-plotbands/: SKILL.md  qe_plotbands.py
skills/psi-rebuild-index/: SKILL.md  rebuild_index.py
skills/psi-remove-computer/: SKILL.md  remove_computer.py
skills/psi-run-calc/: SKILL.md  run_calc.py
skills/psi-status/: SKILL.md  status.py
skills/psi-update-calc/: SKILL.md  (+1 more)
tests/: test_frontmatter.py  test_markdown_table.py
(+53 files in other folders)
